fix image alignment

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -38,10 +38,11 @@ li {
 	padding-left: 2%;
 }
 
-button{
-	
-
+.balch {
+	float: center;
 }
+
+
 
 .btn btn-info{
 	height: 3em;
